# gs-kicad-lib

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LIBRARIES.md  LICENSE  Makefile  README.md  flake.nix  kicad-lib.toml  main.py  pyproject.toml
.githooks/: pre-commit  pre-push
3D-models/: USB-C-SMD_TYPEC-304J-BCP16.step
3d-models/: CONN-TH_XT60.step  CONN-TH_XT60.wrl  LED-SMD_L3.0-W2.7-H1.2.step  OPTO-SMD_IRM-V838M3-C-TR1.step  OWR-1228T-32B__3D_with_location_pin_20220909.step  VSON-10_L3.0-W3.0-H0.6-P0.50.step  VSON-10_L3.0-W3.0-H0.6-P0.50.wrl
scripts/: check-symbol-fields.py  create-passive.py  easyeda-import.py  generate-libraries-md.py  gs-kicad.py  install-git-hooks.sh  setup-kicad.py  setup-kicad.sh
spice-models/: DZDH0401DW.spice.txt
symbols/: GS_Acoustic.kicad_sym  GS_Capacitor_0201.kicad_sym  GS_Capacitor_0402.kicad_sym  GS_Capacitor_0603.kicad_sym  GS_Capacitor_0805.kicad_sym  GS_Capacitor_THT.kicad_sym  GS_Comparators.kicad_sym  GS_Connectors.kicad_sym  GS_Development_Boards.kicad_sym  GS_Diodes.kicad_sym  GS_EEPROM.kicad_sym  GS_Gate_Drivers.kicad_sym  GS_H_Bridges.kicad_sym  GS_IC.kicad_sym  GS_IMU.kicad_sym  GS_Inductors.kicad_sym  GS_LED_Drivers.kicad_sym  GS_Linear_Regulators.kicad_sym  GS_MCU.kicad_sym  GS_Optoelectronic.kicad_sym  GS_Oscillators.kicad_sym  GS_PMIC.kicad_sym  GS_Power_Symbols.kicad_sym  GS_Resistor_0201.kicad_sym  GS_Resistor_0402.kicad_sym  GS_Resistor_0603.kicad_sym  GS_Resistor_0805.kicad_sym  GS_Resistor_THT.kicad_sym  GS_Switches.kicad_sym  GS_Switching_Regulators.kicad_sym  GS_Transistors.kicad_sym  GS_Virtual.kicad_sym
(+108 files in other folders)
